--- a/THANKS
+++ b/THANKS
@@ -28,6 +28,7 @@ Kurt D. Zeilenga <Kurt@OpenLDAP.Org>
 Manfred Weichel <Manfred.Weichel@pdb.siemens.de>
 Marc J. Fraioli <fraioli@dg-rtp.dg.com>
 Mark Kettenis <kettenis@phys.uva.nl>
+Ossama Othman <othman@cs.wustl.edu>
 Sebastian Wilhelmi <wilhelmi@ira.uka.de>
 Stephan Kulow <coolo@kde.org>
 Steven M. Schultz <sms@wlv.iipo.gtegsc.com>
