--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,8 @@ New in 1.3b: 1999-??-??; CVS version 1.3a, Libtool team:
 
 New in 1.3: 1999-04-??; CVS version 1.2g, Libtool team:
 * AM_PROG_LIBTOOL is smaller and faster
+* AC_LIBTOOL_WIN32_DLL is required in configure.in for libtool to
+  attempt to build dlls on win32 hosts
 * Shared libraries on AmigaOS up to version 4 are now disabled
   since they don't meet libtool's requirements for shared libraries
 * -L supports now relative directories
