--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-04-29  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* ltmain.in (nlist, SYMFILE): Use outputname instead of output for
+	names within output_objdir.
+
 1999-04-28  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* libtool.m4 (AC_ENABLE_SHARED, AC_ENABLE_STATIC,
