--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-04-29  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* config.sub, config.guess: Updated from GNU common.
+
 	* mdemo/configure.in: Move AC_LIBLTDL_CONVENIENCE before
 	AM_PROG_LIBTOOL, as suggested by autoconf.
 
