--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,10 @@ New in 1.3: 1999-04-29, Libtool team:
   libtool libraries.  Linking of uninstalled libtool libraries into
   libraries is under development for 1.4.
 * Do not drop library dependencies on platforms that allow them.
+* Linking with uninstalled libraries no longer picks installed ones by 
+  mistake.
+* Use libraries from the build tree when running uninstalled
+  executables (may require double linking).  
 * Allow developers to optimize for build-tree executions.
 * Support -export-symbols-regex for controlled symbol exporting.
 * Support -R to hardcode directories in library search paths.
