--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-04-29  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* NEWS: Summarize news from 1.2 to 1.3.
+
 	* ltmain.in: Save exit status of link_command before removing
 	symbol table object file.
 
