--- a/NEWS
+++ b/NEWS
@@ -10,7 +10,26 @@ New in 1.3b: 1999-??-??; CVS version 1.3a, Libtool team:
 * New demos and tests
 * Various bugfixes
 
-New in 1.3: 1999-04-??; CVS version 1.2g, Libtool team:
+New in 1.3: 1999-04-29, Libtool team:
+* This is just a summary of the changes since 1.2.
+  See the news of intermediate alpha releases below for details.
+* Support for convenience archives.
+* New maintainers.  Anonymous CVS and home page at gnu.org.
+* Portable dlopening interface with libltdl, new -module flag.
+* Correctly link installed libtool libraries into programs and other
+  libtool libraries.  Linking of uninstalled libtool libraries into
+  libraries is under development for 1.4.
+* Do not drop library dependencies on platforms that allow them.
+* Linking with uninstalled libraries no longer picks installed ones by 
+  mistake.
+* Use libraries from the build tree when running uninstalled
+  executables (may require double linking).  
+* Allow developers to optimize for build-tree executions.
+* Support -export-symbols-regex for controlled symbol exporting.
+* Support -R to hardcode directories in library search paths.
+* New ports, demos and tests.  Lots of improvements and bug fixes.
+
+New in CVS version 1.2g, Libtool team:
 * AM_PROG_LIBTOOL is smaller and faster
 * AC_LIBTOOL_WIN32_DLL is required in configure.in for libtool to
   attempt to build dlls on win32 hosts
