--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 1999-04-29  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* configure.in: Bumped to 1.3.
 	* NEWS: Summarize news since 1.2.
 
 	* ltmain.in: Save exit status of link_command before removing
