--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
+1999-04-30  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* configure.in: Bumped to 1.3.0a, just in case.
+
 1999-04-29  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	GNU Libtool 1.3 was released.
 
 	* configure.in: Bumped to 1.3.
 	* NEWS: Summarize news since 1.2.
