--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-04-30  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* libtool.m4: Use ifelse instead of if.
+	Reported by David Mazieres <dm@amsterdam.lcs.mit.edu>
+
 	* configure.in: Bumped to 1.3.0a, just in case.
 
 1999-04-29  Alexandre Oliva  <oliva@dcc.unicamp.br>
