--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
+1999-04-30  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* libtool.m4: Use ifelse instead of if.
+	Reported by David Mazieres <dm@amsterdam.lcs.mit.edu>
+
 1999-04-29  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	GNU Libtool 1.3 was released.
 
 	* NEWS: Summarize news from 1.2 to 1.3.
 
