--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 In the near future:
 ********************
 
+* Look into Andreas Schwab's report about security.
+
 * check whether the version of libtool.m4 is compatible
 with ltconfig/ltmain.sh
 
