--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-09  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+
+	* TODO: updated.
+
 1999-05-06  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
 	* Makefile.am (install-data-hook):  make sure the install directory
@@ -534,7 +538,7 @@
 	* ltconfig.in (*_cmds): quote $ so that they're not expanded by
 	the first eval
 
-1999-03-25  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
+1999-03-25  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
 	* ltmain.in ($PATH):  Expand any tildes in the users path to the
 	contents of $HOME to avoid problems with *_cmds splitting and
@@ -558,7 +562,7 @@
 
 	* ltconfig.in (ld_shlibs, amigaos*): disable shared libraries
 
-1999-03-23  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
+1999-03-23  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
 	* libltdl/configure.in: the sed expression for finding the shared
 	library extension used to think the . in [.] for the cygwin
@@ -654,7 +658,7 @@
 	* tests/Makefile.am (TESTS): added noinst-link.test
 	* doc/libtool.texi: document it
 
-1999-03-19  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
+1999-03-19  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
 	* ltmain.in (dependency_libs): There is no reason to infer that
 	the pseudo library is invalid if dependency_libs='' at
@@ -711,7 +715,7 @@
 	  libtool will break ILD, so we ignore it when generating
 	  dependencies.
 	  
-1999-03-17  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
+1999-03-17  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
 	* doc/PLATFORMS: Thanks to Alexandres changes below, both my
 	hp boxes pass the entire test suite.
