--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-05-17  Jiro Takabatake  <jiro@din.or.jp>
+	
+	* ltconfig.in: port to NEC UX/4800.
+	* NEWS: updated.
+	
 1999-05-17  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
 	* ltconfig.in (beos*, deplibs_check_method): set to pass_all.  BeOS
