--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+New in 1.3.1: 1999-05-??, Libtool team:
+* New port to NEC UX/4800.
+
 New in 1.3: 1999-04-29, Libtool team:
 * This is just a summary of the changes since 1.2.
   See the news of intermediate alpha releases below for details.
