--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,11 @@ NEWS - list of user-visible changes between releases of GNU Libtool
 
 New in 1.3.1: 1999-05-??, Libtool team:
 * New port to NEC UX/4800.
+* Slightly improved BeOS support.
+* Many AIX 4.3.2 test failures have gone.
+* cygwin-b20.1 passes all tests.
+* Close a security hole with mode 777 directory during libltdl installation.
+* Fixed the infamous ``ifelse'' bug in libtool.m4
 
 New in 1.3: 1999-04-29, Libtool team:
 * This is just a summary of the changes since 1.2.
