* NEWS: Added 1.3.1 news items. * doc/PLATFORMS: updated the boxes I have access to, to 1.3.1 in preparation for the next release.

--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,15 @@ New in 1.3b: 1999-??-??; CVS version 1.3a, Libtool team:
 * New demos and tests
 * Various bugfixes
 
+New in 1.3.1: 1999-05-??, CVS version 1.3.0a, Libtool team:
+* New port to NEC UX/4800.
+* cygwin-b20.1 passes all tests.
+* Slightly improved BeOS support.
+* Many AIX 4.3.2 test failures have gone.
+* Pass unknown -L arguments through to the linker (for -LANG:* support).
+* Close a security hole with mode 777 directory during libltdl installation.
+* Fixed the infamous ``ifelse'' bug in libtool.m4
+
 New in 1.3: 1999-04-29, Libtool team:
 * This is just a summary of the changes since 1.2.
   See the news of intermediate alpha releases below for details.
