--- a/TODO
+++ b/TODO
@@ -1,8 +1,9 @@
 In the near future:
 ********************
 
-* check whether the version of libtool.m4 is compatible
-with ltconfig/ltmain.sh
+* Check whether the version of libtool.m4 is compatible with
+ltconfig/ltmain.sh.  Meanwhile, the recommended approach for
+developers using automake is to insert libtool.m4 in acinclude.m4.
 
 * We could have an option to hardcode paths into libraries, as well as
 binaries: `... -Wl,-soname -Wl,/tmp/libtest.so.0 ...'.  This is not
@@ -100,21 +101,30 @@ and also a .a out of .o objects.  The .al would only be used to
 create shared libraries, whereas the .a would be used for creating
 static libraries and programs.
 
+* We should include tests with convenience libraries and reloadable
+objects in the testsuite.
+
 * Try to find a work-around for -[all-]static and libltdl on platforms
-that will fail to find dlopening functions in this case, such as AIX
-4.3.2.0.  Maybe creating an alternate libltdl that provides only for
-dlpreopening, or creating an additional static library to provide
-dummy implementations of the functions that can't be linked
-statically.  This could hardly be made completely transparent, though.
+that will fail to find dlopening functions in this case.  Maybe
+creating an alternate libltdl that provides only for dlpreopening, or
+creating an additional static library to provide dummy implementations
+of the functions that can't be linked statically.  This could hardly
+be made completely transparent, though.
 
 * Need to finalize the documentation, and give a specification of
-`.la' files so that people can depend on their format.  This also
-needs to be done so that DLD uses a public interface to libtool
-archives.  This would be a good thing to put before the maintainance
-notes.
+`.la' files so that people can depend on their format.  This would be
+a good thing to put before the maintainance notes.
 
 * Filenames containing shell meta-characters are not properly handled
 by libtool.  Compiling a file named "a;b.c", for example, fails.
+
+* We could introduce a mechanism to allow for soname rewriting, to
+ease multi-libc support.  Installers could specify a prefix, suffix or
+sed command to modify the soname, and libtool would create the
+corresponding link.  This would allow for rebuilding a library with
+the same version number, but depending on different versions of libc,
+for example.  In the future, we might even have an option to encode
+the sonames of all dependencies of a library into its soname.
 
 Things to think about:
 **********************
