--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+1999-05-21  Pavel Roskin  <pavel_roskin@geocities.com> 
+
+	* Makefile.am (EXTRA_DIST): Don't distribute instutils.
+	(install-data-hook): use libltdl/Makefile.am's local-install files
+	rule.
+	* libltdl/Makefile.am (local-install-files):  New rule to install
+	libltdl without creating links or mode 777 directories.
+	* instutil/*: deleted.
+
 1999-05-21  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* doc/PLATFORMS: Updated to 1.3.1 for all platforms I've got.
