--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+1999-05-21  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+
+	GNU Libtool 1.3.1 was released.
+
+	* configure.in:  bumped to revision 1.3.1.
+	* NEWS: insert todays date alongside 1.3.1 release.
+	* Makefile.in: use gnu not gnits rules
+	* config.guess: synch with gnu common & apply Takabatake-san's
+	MIPS *000 patch.
+	* config.sub: synch with gnu common.
+
 1999-05-21  Pavel Roskin  <pavel_roskin@geocities.com> 
 
 	* Makefile.am (EXTRA_DIST): Don't distribute instutils.
