--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 
 	GNU Libtool 1.3.1 was released.
 
+	* AUTHORS: de CR/LFed.
+	* config.guess: ditto.
+	* config.sub: ditto.
+
 	* configure.in:  bumped to revision 1.3.1.
 	* NEWS: insert todays date alongside 1.3.1 release.
 	* Makefile.in: use gnu not gnits rules
