* AUTHORS: Added myself back into the file! Seems I managed to delete myself somehow :-?

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,3 +5,5 @@ Foundation.
 Gordon Matzigkeit.  Designed and implemented libtool.
 Alexandre Oliva <oliva@dcc.unicamp.br>.  Co-maintainer.
 Thomas Tanner <tanner@gmx.de>.  Co-maintainer.
+Gary V. Vaughan <gary@oranda.demon.co.uk>.  Co-maintainer.
+
