--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
 	GNU Libtool 1.3.1 was released.
 
+	* AUTHORS: Added myself back into the file! Seems I
+	managed to delete myself somehow :-?
+
 	* AUTHORS: de CR/LFed.
 	* config.guess: ditto.
 	* config.sub: ditto.
