--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-22  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+
+	* configure.in: bumped to 1.3.1a.
+
 1999-05-21  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
 	GNU Libtool 1.3.1 was released.
