--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+1999-05-24 Thomas Tanner  <tanner@ffii.org>
+
+	* NEWS: support for installing stripped libraries using GNU strip 
+	* ltconfig.in: set deplibs_check_method=pass_all on FreeBSD,
+	  Linux and Solaris since no one can reproduce the famous deplibs
+	  bug
+	* ltmain.in: preserve $CC (reported by Tom Tromey),
+	  strip libraries using GNU strip if it's available and the
+	  -s flag was passed to "install"
+
 1999-05-23  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* doc/PLATFORMS: Release 1.3.1 passes on GNU Hurd/x86.
